--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.13.4",
     "mongoose": "^4.10.5",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "pug": "^2.0.0-rc.2"
   }
 }
