set up basic routes

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "body-parser": "^1.17.2",
     "express": "^4.13.4",
     "mongoose": "^4.10.5",
+    "mongoose-seeder": "^1.2.1",
+    "mongoose-unique-validator": "^1.0.5",
     "morgan": "^1.7.0",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.2",
+    "validator": "^7.0.0"
   }
 }
