--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "nodemon": "^1.9.1"
   },
   "dependencies": {
+    "basic-auth": "^1.1.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "connect-mongo": "^1.3.2",
     "express": "^4.13.4",
+    "express-session": "^1.15.3",
     "mongoose": "^4.10.5",
     "mongoose-seeder": "^1.2.1",
     "mongoose-unique-validator": "^1.0.5",
