--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
     "mocha": "^3.4.2",
     "mongoose-seeder": "^1.2.1",
     "nodemon": "^1.9.1"
